--- a/angular.json
+++ b/angular.json
@@ -67,6 +67,9 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "port": 9000
+          },
           "configurations": {
             "production": {
               "buildTarget": "my-app:build:production"
