--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^17.0.0",
     "@syncfusion/ej2-angular-charts": "^26.1.42-ngcc",
     "angular-in-memory-web-api": "^0.18.0",
+    "firebase": "^11.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "uuid": "^10.0.0",
@@ -29,6 +30,7 @@
     "@angular-devkit/build-angular": "^17.0.9",
     "@angular/cli": "^17.0.9",
     "@angular/compiler-cli": "^17.0.0",
+    "@types/firebase": "^2.4.32",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
